--- a/gpunit/fasta_genome_test.yml
+++ b/gpunit/fasta_genome_test.yml
@@ -10,13 +10,16 @@
 name: "tfsites.AnalyzeGwas - Test passing genome as .fa file that first needs to be pickled (as in loadaGenome) before use."
 module: tfsites.AnalyzeGwas
 params:
-    input.data: "data/14-input_gwas.tsv"
-    normpbm: "data/14-input_ets-norm-pbm.tsv"
-    genome: "https://datasets.genepattern.org/data/module_support_files/tfsites/hg38.fa"
-    IUPAC: "NNGGAWNN"
+    reference.genome: "https://datasets.genepattern.org/data/module_support_files/tfsites/hg38.fa"
+    GWAS.data.input: "data/14-input_gwas.tsv"
+    relative.affinity.PBM.data: "data/14-input_ets-norm-pbm.tsv"
+    IUPAC.definition: "NNGGAWNN"
     zero.pos: "FALSE"
-    mutations: "inc,del,denovo"
-    out.filename:  "14-output_fa_ets-all-possible-muts.tsv"
+    SNV.effect: "inc,del,denovo"
+    SNV.effects.of.GWAS.data.filename:  "14-output_ets-all-possible-muts.tsv"
+
 assertions:
     jobStatus: success
+
+
 
