Update to match June version of docs

--- a/gpunit/fasta_genome_test.yml
+++ b/gpunit/fasta_genome_test.yml
@@ -11,7 +11,7 @@ name: "tfsites.AnalyzeGenomeMPRA - Basic test"
 module: tfsites.AnalyzeGenomeMPRA
 params:
     MPRA.data: "data/06-input_mpra.tsv"
-    PBM/PWM.reference.data: "data/06-input_ets-norm-pbm.tsv"
+    PBM.or.PWM.reference.data: "data/06-input_ets-norm-pbm.tsv"
     reference.genome: "https://datasets.genepattern.org/data/module_support_files/tfsites/hg38.fa"
     binding.site.definition: "NNGGAWNN"
     zero-indexed.genomic.coordinates: "FALSE"
